--- a/src/main/resources/templates/form/item.html
+++ b/src/main/resources/templates/form/item.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
-            href="../css/bootstrap.min.css" rel="stylesheet">
+          href="../css/bootstrap.min.css" rel="stylesheet">
     <style>
         .container {
             max-width: 560px;
         }
+
     </style>
 </head>
 <body>
@@ -27,7 +28,8 @@
     </div>
     <div>
         <label for="itemName">상품명</label>
-        <input type="text" id="itemName" name="itemName" class="form-control" value="상품A" th:value="${item.itemName}" readonly>
+        <input type="text" id="itemName" name="itemName" class="form-control" value="상품A" th:value="${item.itemName}"
+               readonly>
     </div>
     <div>
         <label for="price">가격</label>
@@ -35,7 +37,8 @@
     </div>
     <div>
         <label for="quantity">수량</label>
-        <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.quantity}" readonly>
+        <input type="text" id="quantity" name="quantity" class="form-control" value="10" th:value="${item.quantity}"
+               readonly>
     </div>
 
     <hr class="my-4">
@@ -45,13 +48,15 @@
             <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='editForm.html'"
                     th:onclick="|location.href='@{/form/items/{itemId}/edit(itemId=${item.id})}'|"
-                    type="button">상품 수정</button>
+                    type="button">상품 수정
+            </button>
         </div>
         <div class="col">
             <button class="w-100 btn btn-secondary btn-lg"
                     onclick="location.href='items.html'"
                     th:onclick="|location.href='@{/form/items}'|"
-                    type="button">목록으로</button>
+                    type="button">목록으로
+            </button>
         </div>
     </div>
 
